# deep-q-network

./: CMakeLists.txt  analysis.ipynb  build.sh  clean.sh  reinforcement_q_learning.ipynb  runs.sh  simulation_runner.sh
include/: Agent.h  DQN.h  Environment.h  Person.h  ReplayMemory.h  TicTacToeAgent.h  TicTacToeEnvironment.h  Transition.h  TransposedTransition.h
results/: tic-tac-toe-policy.pt  tic-tac-toe-target.pt
src/: Agent.cpp  CMakeLists.txt  DQN.cpp  DQN.h  Environment.cpp  Makefile  Person.cpp  ReplayMemory.cpp  TicTacToeAgent.cpp  TicTacToeEnvironment.cpp  agent.py  device_manager.py  dqn.py  environment.py  main.cpp  main.py  memory.py  transition.py  ttt_environment.py
